[tool.poetry]
name = "supabase-export"
version = "0.1.0"
description = "Supabase → Excel → Telegram exporter"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
supabase = "^2.10"
openpyxl = "^3.1"
httpx = "^0.27"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"